--- a/example/index.html
+++ b/example/index.html
@@ -22,12 +22,17 @@
       <div class="row main-row">
         <!-- Left Column -->
         <div class="col-xs-2 sidebar">
+          <div>
+            <a href="https://projexcost.com/"><img src="Projex_Strap_blk.png" style="width: 100%; padding-bottom: 10%;" /></a>
+          </div>
+          
           <!-- Main Navigation -->
           <ul class="nav nav-sidebar">
             <!-- <li id="floorplan_tab"><a href="#">
               Edit Floorplan
               <span class="glyphicon glyphicon-chevron-right pull-right"></span>
             </a></li> -->
+
             <li id="design_tab"><a href="#">
               Design
               <span class="glyphicon glyphicon-chevron-right pull-right"></span>
