--- a/example/index.html
+++ b/example/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Blueprint 3D - Example</title>
+    <link rel="icon" href="imgs/Projex_Strap_blk.png" type="image/x-icon" />
 
     <link href="css/bootstrap.css" rel="stylesheet">
     <link href="css/example.css" rel="stylesheet">
@@ -23,7 +24,7 @@
         <!-- Left Column -->
         <div class="col-xs-2 sidebar">
           <div>
-            <a href="https://projexcost.com/"><img src="Projex_Strap_blk.png" style="width: 100%; padding-bottom: 10%;" /></a>
+            <a href="https://projexcost.com/"><img src="imgs/Projex_Strap_blk.png" style="width: 100%; padding-bottom: 10%;" /></a>
           </div>
           
           <!-- Main Navigation -->
@@ -151,7 +152,11 @@
               </a>
               <a class="btn btn-sm btn-default btn-file screenshot">
                 Screenshot
-               </a>
+              </a>
+            </div>
+
+            <div id="right_top_panel">
+              <h4><span class="price">0 </span> AED</h4>
             </div>
 
             <div id="camera-controls">
