--- a/example/index.html
+++ b/example/index.html
@@ -157,6 +157,21 @@
 
             <div id="right_top_panel">
               <h4><span class="price">0 </span> AED</h4>
+
+              <div class="row">
+                <table class="form-control table table-scroll">
+                  <thead>
+                    <td>ID</td>
+                    <td>Name</td>
+                    <td>Count</td>
+                    <td>Price</td>
+                    <td>All Price</td>
+                  </thead>
+                  <tbody id="shopping_cart_table">
+                    
+                  </tbody>
+                </table>
+                </div>
             </div>
 
             <div id="camera-controls">
@@ -232,6 +247,5 @@
         <!-- End Right Column -->
       </div>
     </div>
-
   </body>
 </html>
