--- a/example/index.html
+++ b/example/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Blueprint 3D - Example</title>
+    <title>ProjexCost-3D Ordering</title>
     <link rel="icon" href="imgs/Projex_Strap_blk.png" type="image/x-icon" />
 
     <link href="css/bootstrap.css" rel="stylesheet">
