New models and csv export feature

--- a/example/index.html
+++ b/example/index.html
@@ -266,7 +266,13 @@
                   </tbody>
                 </table>
                 <br>
-                <h4 class="total_price_checkout"><span class="checkout_price">0 </span> AED</h4>
+                <div class="row">
+                  <div class="col-md-6"></div>
+                  <div class="col-md-6 alignRight">
+                    <button class="btn btn-primary inline-flex exportCSV">Export CSV</button>
+                    <h4 class="total_price_checkout inline-flex"><span class="checkout_price">0 </span> AED</h4>
+                  </div>
+                </div>                
               </div>
             </div>
           </div>
